# hiksadp-for-linux

./: .gitignore  HikSADP_Linux_PRD_v1.0.docx  README.md
.github/workflows/: auto-tag.yml  ci.yml  release.yml
docs/: PRD.md
hiksadp/: CMakeLists.txt  IMPLEMENTATION_CHECKLIST_V1.md
hiksadp/src/: CMakeLists.txt  main_cli.cpp  main_gui.cpp
hiksadp/src/core/: csv.cpp  csv.hpp  device.cpp  device.hpp  logger.cpp  logger.hpp  result.hpp  types.hpp
hiksadp/src/management/: device_manager.cpp  device_manager.hpp  isapi_client.cpp  isapi_client.hpp  password_reset_service.cpp  password_reset_service.hpp  security_question_reset.cpp  security_question_reset.hpp
hiksadp/src/protocol/: sadp_discovery.cpp  sadp_discovery.hpp  sadp_packet.cpp  sadp_packet.hpp
hiksadp/src/ui/: device_table.cpp  device_table.hpp  main_window.cpp  main_window.hpp
hiksadp/tests/: CMakeLists.txt  test_csv.cpp  test_packet.cpp  test_smoke.cpp  test_types.cpp
